# gnome-factures

./: Cargo.toml  README.md  TODO.md  makefile
assets/: factures.desktop  template.tex
src/: app.rs  config.rs  latex.rs  main.rs
src/app/: address.rs  author_view.rs  billing_view.rs  client.rs  client_form.rs  client_selector_group.rs  client_view.rs  editable_combo_row.rs  pdf_viewer.rs  product.rs  products_view.rs
src/app/products_view/: edit_page.rs  row.rs
