[package]
name = "gnome-factures"
version = "0.1.0"
edition = "2021"

[dependencies]
adw = { version = "0.7.2", package = "libadwaita", features = ["v1_5", "v1_6"] }
chrono = "0.4.40"
confy = "0.6.1"
gtk = { version = "0.9.6", package = "gtk4", features = ["v4_16"] }
handlebars = "6.3.2"
open = "5.3.2"
poppler-rs = "0.24.1"
relm4 = { version = "0.9.1", features = ["libadwaita"] }
relm4-components = { version = "0.9.1", features = ["libadwaita"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
